--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,8 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-item:not(:last-child) {
-  margin-right: 10px;
+.social-list-link:hover, .social-list-link:focus {
+  background-color: var(--accent-color);
 }
 
 .social-list-link:hover .social-list-icon,
@@ -113,9 +113,8 @@ body {
   fill: white;
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: var(--accent-color);
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .modal {
@@ -219,17 +218,16 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.navigation-link:hover, .navigation-link:focus {
+  color: var(--accent-color);
+}
+
 .navigation-item {
   margin-right: 50pt;
 }
 
 .navigation-item:last-child {
   margin-right: 0px;
-}
-
-.navigation-link:hover,
-.navigation-link:focus {
-  color: var(--accent-color);
 }
 
 .navigation-link-element:hover,
@@ -272,15 +270,17 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail-link:hover .mail-img,
-.mail-link:focus .mail-img {
-  fill: var(--accent-color);
-}
-
 .mail-link:hover,
 .mail-link:focus {
   color: var(--accent-color);
   outline: none;
+}
+
+.mail-link:hover .mail-img,
+.mail-link:hover .mail-img,
+.mail-link:focus .mail-img,
+.mail-link:focus .mail-img {
+  fill: var(--accent-color);
 }
 
 .tel-img {
@@ -289,15 +289,17 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.tel-link:hover .tel-img,
-.tel-link:focus .tel-img {
-  fill: var(--accent-color);
-}
-
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
   outline: none;
+}
+
+.tel-link:hover.tel-img,
+.tel-link:hover .tel-img,
+.tel-link:focus.tel-img,
+.tel-link:focus .tel-img {
+  fill: var(--accent-color);
 }
 
 .navigation-link-studio {
@@ -410,16 +412,16 @@ body {
   display: flex;
 }
 
-.about-img-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .about-title {
   margin-bottom: 50px;
 }
 
 .about-img-item {
   position: relative;
+}
+
+.about-img-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .img-about-card {
@@ -507,6 +509,17 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.client-list-link:hover, .client-list-link:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.client-list-link:hover .client-icon,
+.client-list-link:hover .client-icon, .client-list-link:focus .client-icon,
+.client-list-link:focus .client-icon {
+  fill: var(--accent-color);
+}
+
 .client-list {
   display: flex;
   align-items: center;
@@ -519,17 +532,6 @@ body {
 .client-icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-list-link:hover .client-icon,
-.client-list-link:focus .client-icon {
-  fill: var(--accent-color);
-}
-
-.client-list-link:hover,
-.client-list-link:focus {
-  border-color: var(--accent-color);
-  outline: none;
 }
 
 .btn-portfolio {
@@ -559,8 +561,7 @@ body {
   margin-right: 0px;
 }
 
-.button-nav:hover,
-.button-nav:focus {
+.button-nav:hover, .button-nav:focus {
   background-color: var(--accent-color);
   color: white;
   cursor: pointer;
@@ -587,9 +588,9 @@ body {
   display: block;
 }
 
-.portfolio-list-link:hover,
-.portfolio-list-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.portfolio-shadow:hover .overley,
+.portfolio-shadow:focus .overley {
+  transform: translateY(0%);
 }
 
 .content {
@@ -611,6 +612,10 @@ body {
 
 .portfolio-list-link:nth-child(3n) {
   margin-right: 0px;
+}
+
+.portfolio-list-link:hover, .portfolio-list-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list {
@@ -641,11 +646,6 @@ body {
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-shadow:hover .overley,
-.portfolio-shadow:focus .overley {
-  transform: translateY(0%);
-}
-
 .modal-form {
   display: flex;
   flex-direction: column;
@@ -664,6 +664,10 @@ body {
 .modal-form-input:focus {
   border-color: var(--accent-color);
   outline: none;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
 }
 
 .modal-form-input-wrapper {
@@ -703,10 +707,6 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 12px;
-}
-
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
 }
 
 .modal-close-btn:hover .icon-btn {
@@ -900,8 +900,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link-footer:hover,
-.social-list-link-footer:focus {
+.social-list-link-footer:hover, .social-list-link-footer:focus {
   background-color: var(--accent-color);
 }
 
@@ -951,6 +950,10 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.modal-form-input-footer:focus {
+  border-color: #2196f3;
+}
+
 .modal-form-btn-footer {
   width: 200px;
   height: 50px;
@@ -978,9 +981,5 @@ body {
   width: 24px;
   height: 24px;
   fill: #ffffff;
-}
-
-.modal-form-input-footer:focus {
-  border-color: #2196f3;
 }
 /*# sourceMappingURL=main.css.map */
