--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -26,16 +26,15 @@
   align-items: center;
   outline: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+  &:hover .social-list-icon,
+  &:focus .social-list-icon {
+    fill: white;
+  }
 }
 .social-list-item:not(:last-child) {
   margin-right: 10px;
-}
-
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
-  fill: white;
-}
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: var(--accent-color);
 }
