--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -34,9 +34,9 @@
 }
 .address-link {
   margin-bottom: 9px;
-}
-.address-link:last-child {
-  margin-bottom: 0px;
+  &:last-child {
+    margin-bottom: 0px;
+  }
 }
 .footer-title {
   font-size: 14px;
@@ -70,8 +70,8 @@
   outline: none;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-list-link-footer:hover,
-.social-list-link-footer:focus {
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
