--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -28,17 +28,18 @@
   color: #212121;
   outline: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .navigation-item {
   margin-right: 50pt;
+  &:last-child {
+    margin-right: 0px;
+  }
 }
-.navigation-item:last-child {
-  margin-right: 0px;
-}
-.navigation-link:hover,
-.navigation-link:focus {
-  color: var(--accent-color);
-}
+
 .navigation-link-element:hover,
 .navigation-link-element:focus {
   color: var(--accent-color);
@@ -73,28 +74,30 @@
   fill: var(--accent-second-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mail-link:hover .mail-img,
-.mail-link:focus .mail-img {
-  fill: var(--accent-color);
-}
+
 .mail-link:hover,
 .mail-link:focus {
   color: var(--accent-color);
   outline: none;
+  & .mail-img,
+  & .mail-img {
+    fill: var(--accent-color);
+  }
 }
 .tel-img {
   margin-right: 10px;
   fill: var(--accent-second-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.tel-link:hover .tel-img,
-.tel-link:focus .tel-img {
-  fill: var(--accent-color);
-}
+
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
   outline: none;
+  &.tel-img,
+  & .tel-img {
+    fill: var(--accent-color);
+  }
 }
 
 .navigation-link-studio {
@@ -106,16 +109,16 @@
   outline: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
-}
-.navigation-link-studio::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background: var(--accent-color);
-}
-.navigation-link-studio::after {
-  position: absolute;
-  transform: translateY(28px);
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--accent-color);
+    & {
+      position: absolute;
+      transform: translateY(28px);
+    }
+  }
 }
