--- a/sass/layout/_our_client.scss
+++ b/sass/layout/_our_client.scss
@@ -15,24 +15,24 @@
   align-items: center;
   justify-content: center;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+    & .client-icon,
+    & .client-icon {
+      fill: var(--accent-color);
+    }
+  }
 }
 .client-list {
   display: flex;
   align-items: center;
-}
-.client-list:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 .client-icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.client-list-link:hover .client-icon,
-.client-list-link:focus .client-icon {
-  fill: var(--accent-color);
-}
-.client-list-link:hover,
-.client-list-link:focus {
-  border-color: var(--accent-color);
-  outline: none;
 }
