--- a/sass/layout/_partfolio_card.scss
+++ b/sass/layout/_partfolio_card.scss
@@ -15,12 +15,12 @@
 .portfolio-shadow {
   outline: none;
   display: block;
+  &:hover .overley,
+  &:focus .overley {
+    transform: translateY(0%);
+  }
 }
-.portfolio-list-link:hover,
-.portfolio-list-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .content {
   padding: 20px 24px;
   border-bottom: 1px solid #eeeeee;
@@ -31,12 +31,17 @@
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-}
-.portfolio-list-link:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
-.portfolio-list-link:nth-child(3n) {
-  margin-right: 0px;
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .portfolio-list {
@@ -63,8 +68,4 @@
   top: 0;
   transform: translateY(100%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-shadow:hover .overley,
-.portfolio-shadow:focus .overley {
-  transform: translateY(0%);
 }
