--- a/sass/layout/_portfolio_btn.scss
+++ b/sass/layout/_portfolio_btn.scss
@@ -19,13 +19,13 @@
   padding: 6px 22px;
   outline: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-nav:last-child {
-  margin-right: 0px;
-}
-.button-nav:hover,
-.button-nav:focus {
-  background-color: var(--accent-color);
-  color: white;
-  cursor: pointer;
+  &:last-child {
+    margin-right: 0px;
+  }
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: white;
+    cursor: pointer;
+  }
 }
