--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,17 +12,13 @@
   display: flex;
 }
 .address-link-addres {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  @include font(14px, 400, 1.71);
   letter-spacing: 0.03em;
   color: #ffffff;
 }
 .mail-footer,
 .tel-footer {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  @include font(14px, 400, 1.71);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
