--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -20,10 +20,7 @@
   padding: 28px 82px;
   background: rgba(47, 48, 58, 0.8);
   font-family: var(--main-font);
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 700, 1.14);
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
