--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,9 +19,7 @@
 }
 
 .navigation-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 500, 1.14);
   letter-spacing: 0.02em;
   color: #212121;
   outline: none;
@@ -51,9 +49,7 @@
 }
 .mail-link,
 .tel-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 500, 1.14);
   letter-spacing: 0.02em;
   color: var(--accent-second-color);
   display: flex;
@@ -99,9 +95,7 @@
 }
 
 .navigation-link-studio {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 500, 1.14);
   letter-spacing: 0.02em;
   color: #212121;
   outline: none;
