--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,9 +12,7 @@
   max-width: 1600px;
 }
 .hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 60px;
+  @include font(44px, 900, 1.36);
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
